// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Coverage Plugin adds any extra rows to a details block 1`] = `
"## Coverage Report

> :+1: Test coverage is looking good.

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|0|100|100|100|100||:white_check_mark:|
|1|100|100|100|100||:white_check_mark:|
|2|100|100|100|100||:white_check_mark:|

<details>
<summary>
and 7 more...
</summary>

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|3|100|100|100|100||:white_check_mark:|
|4|100|100|100|100||:white_check_mark:|
|5|100|100|100|100||:white_check_mark:|
|6|100|100|100|100||:white_check_mark:|
|7|100|100|100|100||:white_check_mark:|
|8|100|100|100|100||:white_check_mark:|
|9|100|100|100|100||:white_check_mark:|
</details>"
`;

exports[`Coverage Plugin handles multiple packages 1`] = `
"## Coverage Report

> :+1: Test coverage is looking good.

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|src/one.js|100|100|100|100||:white_check_mark:|
|src/two.js|100|100|100|100||:white_check_mark:|
|src/three.js|100|100|100|100||:white_check_mark:|"
`;

exports[`Coverage Plugin handles multiple projects 1`] = `
"## Coverage Report

> :+1: Test coverage is looking good.

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|src/one.js|100|100|100|100||:white_check_mark:|
|src/two.js|100|100|100|100||:white_check_mark:|
|src/three.js|100|100|100|100||:white_check_mark:|"
`;

exports[`Coverage Plugin handles relative paths correctly 1`] = `
"## Coverage Report

> :+1: Test coverage is looking good.

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|src/index.js|100|100|100|100||:white_check_mark:|"
`;

exports[`Coverage Plugin ignores the row if no lines 1`] = `
"## Coverage Report

> :+1: Test coverage is looking good.

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|src/one.js|-|-|-|-||-|"
`;

exports[`Coverage Plugin includes a link to the committed file 1`] = `
"## Coverage Report

> :+1: Test coverage is looking good.

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|[src/one.js](../blob/abc123/src/one.js)|100|100|100|100||:white_check_mark:|
|[src/two.js](../blob/abc123/src/two.js)|100|100|100|100||:white_check_mark:|"
`;

exports[`Coverage Plugin includes two digits after the decimal point 1`] = `
"## Coverage Report

> Test coverage is looking a little low for the files created or modified in this PR, perhaps we need to improve this.

\`\`\`
Coverage threshold for branches (80%) not met: 33.33%
Coverage threshold for functions (80%) not met: 66.67%
\`\`\`

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|src/one.js|95.24|33.33|66.67|100||:x:|"
`;

exports[`Coverage Plugin only includes rows that have been created or modified 1`] = `
"## Coverage Report

> :+1: Test coverage is looking good.

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|src/one.js|100|100|100|100||:white_check_mark:|
|src/two.js|100|100|100|100||:white_check_mark:|"
`;

exports[`Coverage Plugin passes if no total for each metric 1`] = `
"## Coverage Report

> :+1: Test coverage is looking good.

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|src/one.js|100|100|100|100||:white_check_mark:|"
`;

exports[`Coverage Plugin reports row as failing when conditionals does not meet the threshold 1`] = `
"## Coverage Report

> Test coverage is looking a little low for the files created or modified in this PR, perhaps we need to improve this.

\`\`\`
Coverage threshold for branches (80%) not met: 0%
\`\`\`

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|src/one.js|100|0|100|100||:x:|"
`;

exports[`Coverage Plugin reports row as failing when lines does not meet the threshold 1`] = `
"## Coverage Report

> Test coverage is looking a little low for the files created or modified in this PR, perhaps we need to improve this.

\`\`\`
Coverage threshold for lines (80%) not met: 0%
\`\`\`

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|src/one.js|100|100|100|0|1|:x:|"
`;

exports[`Coverage Plugin reports row as failing when methods does not meet the threshold 1`] = `
"## Coverage Report

> Test coverage is looking a little low for the files created or modified in this PR, perhaps we need to improve this.

\`\`\`
Coverage threshold for functions (80%) not met: 0%
\`\`\`

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|src/one.js|100|100|0|100||:x:|"
`;

exports[`Coverage Plugin reports row as failing when statements does not meet the threshold 1`] = `
"## Coverage Report

> Test coverage is looking a little low for the files created or modified in this PR, perhaps we need to improve this.

\`\`\`
Coverage threshold for statements (80%) not met: 0%
\`\`\`

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|src/one.js|0|100|100|100||:x:|"
`;

exports[`Coverage Plugin reports row as passing when all metrics meet the threshold 1`] = `
"## Coverage Report

> :+1: Test coverage is looking good.

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|src/one.js|100|100|100|100||:white_check_mark:|"
`;

exports[`Coverage Plugin reports uncovered lines 1`] = `
"## Coverage Report

> Test coverage is looking a little low for the files created or modified in this PR, perhaps we need to improve this.

\`\`\`
Coverage threshold for lines (80%) not met: 0%
\`\`\`

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|src/one.js|100|100|100|0|1, 2, 3, 4, 5, 6, 7, 8, 9, 10...|:x:|
|src/two.js|100|100|100|0|1|:x:|"
`;

exports[`Coverage Plugin reports uncovered lines with link if sha available 1`] = `
"## Coverage Report

> Test coverage is looking a little low for the files created or modified in this PR, perhaps we need to improve this.

\`\`\`
Coverage threshold for lines (80%) not met: 0%
\`\`\`

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|[src/one.js](../blob/abc123/src/one.js)|100|100|100|0|[1](../blob/abc123/src/one.js#L1)|:x:|"
`;

exports[`Coverage Plugin shortens and wraps long paths 1`] = `
"## Coverage Report

> :+1: Test coverage is looking good.

|Impacted Files|% Stmts|% Branch|% Funcs|% Lines|Uncovered Lines||
|---|:-:|:-:|:-:|:-:|:-:|:-:|
|../xxxxxxxxxx/xxxxxxxxxx/<br>xxxxxxxxxx/xxxxxxxxxx/<br>xxxxxxxxxx/xxxxxxxxxx/<br>xxxxxxxxxx/xxxxxxxxxx|100|100|100|100||:white_check_mark:|"
`;
